--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,147 @@
 .logo-container img {
     height: 50px;
 }
+.card-container-wrapper {
+    display: flex;
+    justify-content: center;
+  }
+.card-container {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .card {
+    flex: 0 0 100px;
+    background-color: #ffffff;
+    border: 1px solid #808080;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 10px 50px 50px 50px;
+    text-align: center;
+    transition: box-shadow 0.3s, transform 0.3s;
+    margin-right: 10px;
+    
+  }
+  
+  .card:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transform: scale(1.4);
+   
+
+  }
+  
+.cardtext{
+    font-size: 25px;
+    padding: 15px;
+    color: #5c5c5c;
+}
+
+  h2 {
+    font-size: 14px;
+    margin-bottom: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  img {
+    width: 350px;
+    height: 350px;
+    margin-bottom: 5px;
+  }
+  
+  .btn {
+    background-color: #808080;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 5px 10px;
+    cursor: pointer;
+    height: 35px;
+    width: 100px;
+  }
+  .btn:hover{
+    background: linear-gradient(to bottom, #5c5c5c, #55af78);
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    height: 35px;
+    width: 100px;
+  }
+
+
+  h1 {
+    font-size: 36px;
+    line-height: 1.2;
+    margin-bottom: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    margin-left: 100px;
+  }
+  
+  p {
+    font-size: 20px;
+    line-height: 2;
+    margin-bottom: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    margin-left: 100px;
+  }
+
+  .pronosticos {
+    position: relative;
+    width: 100%;
+    height: 1000px; /* Ajusta la altura según sea necesario */
+    overflow: hidden;
+  }
+  
+  .imgxd {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: auto;
+  }
+  .backprono{
+    background-image: url("images/bck2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 150vh;
+  }
+
+  /* .contact-section {
+    padding: 20px;
+  }
+  
+  h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  h2 {
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+  
+  input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid #808080;
+    border-radius: 0;
+    margin-bottom: 10px;
+  }
+  
+  .edit-input {
+    border-radius: 50%;
+  }
+  
+  button[type="submit"] {
+    padding: 10px 20px;
+    border-radius: 50%;
+    background-color: #666666;
+    color: white;
+    border: none;
+  }
+   */
