--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,54 @@
 .logo-container img {
     height: 50px;
 }
+
+.custom-button {
+    background-color: #4AE49A;
+    color: #FFFFFF;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 33px;
+    position: absolute;
+    width: 186.84px;
+    height: 54px;
+    left: 46.53%;
+    right: 21.18%;
+    top: 770px;
+}
+
+.alert-title {
+    position: absolute;
+    height: 65px;
+    left: 46.53%;
+    right: 21.18%;
+    color: #4AE49A;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 65px;
+    top: 200px;
+}
+
+.alert-description {
+    position: absolute;
+    height: 284px;
+    left: 46.53%;
+    right: 10.87%;
+    
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 40px;
+    color: #333333;
+    top: 350px;
+}
+
+.alert-img {
+    position: absolute;
+    width: 787px;
+    height: 672px;
+    left: 50.09px;
+    top: 200px;
+  }
