--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  font-family: Arial, Helvetica, sans-serif;
  }
 body {
     margin: 0;
@@ -13,7 +14,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    margin: 20px;
+    margin: 15px;
     backdrop-filter: brightness(0.5);
     z-index: 100;
     top: 0;
@@ -297,15 +298,16 @@ section.ofrecemos {
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 150vh;
+    height: 145vh;
   }
   .mapas{
     background-image: url("images/bck1.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    padding: 10px;
     width: 100%;
-    height: 190vh;
+    height: 150vh;
  
   }
   .content{
@@ -318,10 +320,7 @@ section.ofrecemos {
     
   }
 
-  .contact-section {
-    padding: 20px;
-    height: 700px;
-  }
+  
   
   h1 {
     font-size: 24px;
@@ -333,29 +332,52 @@ section.ofrecemos {
     margin-bottom: 20px;
   }
   
-  input[type="text"] {
+  .contact-section {
+    display: block;
     align-items: center;
     text-align: center;
-    display: flex;
-    width: 250px;
-    padding: 10px;
-    border: 2px solid #808080;
-    margin-bottom: 10px;
+    height: 400px;
+    padding: 50px;
   }
-  
-  .edit-input {
-    border-radius:20px;
-  }
-  
-  button[type="submit"] {
-    padding: 10px 20px;
-    border-radius: 20px;
-    background-color: #666666;
-    color: white;
-    border: none;
-  }
-   */
 
+  .contact-section h1 {
+    font-size: 32pt;
+    font-family: Arial;
+    margin: 0;
+    padding: 0;
+    line-height: 32pt;
+    color: #303030;
+  }
+
+  .contact-section p {
+    margin: 20px ;
+    color: #303030;
+    align-items: center;
+  }
+
+  .contact-section input[type="text"] {
+    width: 500px;
+    height: 32px;
+    border: 2px solid #555;
+    border-radius: 50px;
+    padding: 15px 10px;
+    margin: 15px;
+    display: block;
+    align-items: center;
+    text-align: center;
+    margin: 15px auto;
+  }
+  
+
+  .contact-section button[type="submit"] {
+    width: 150px;
+    height: 40px;
+    background-color: #555;
+    color: #fff;
+    border: none;
+    border-radius: 50px;
+    padding: 15px 10px;
+  }
 .botonesimagenes {
     color: white;
     padding: 20px 75px;
@@ -366,6 +388,7 @@ section.ofrecemos {
 .columna1{
   margin-right: 150px;
   margin-bottom: 300px;
+  
 }
 
 .txtmapas{
@@ -410,7 +433,6 @@ a.btn1banner, a:hover{
   -webkit-text-fill-color: white;
   font-family:Arial, Helvetica, sans-serif;
   font-weight: bold;
-
   text-align: left;   
 }
 .columna1{
@@ -432,6 +454,7 @@ a.btn1banner, a:hover{
     text-align: center; 
     margin-top: -2px;
     padding: 300px 0px 100px 0px;
+    height: 250px;
 }
   
 .columna {
@@ -460,8 +483,11 @@ a.btn1banner, a:hover{
     color: #4AE49A;
     margin: 0 10px;
 }
-.alertas{
-  height: 700px;
+.alert-section{
+display: flex;
+}
+.alert-content{
+  text-align: center;
 }
 .nosotros{
   text-align: center;
@@ -551,7 +577,7 @@ a.btn1banner, a:hover{
   top: 200px;
 }
 .ContenerdorOfrecemos{
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 1500px;
 }
@@ -612,4 +638,50 @@ text-align: justify;
 
 h3 {
   font-size: 28px;
+}
+.alert-section {
+  overflow: hidden;
+}
+
+.alert-image {
+  float: left;
+}
+
+.alert-content {
+  float: right;
+}
+
+.background-section {
+  background-image: url('images/bck4.png');
+  background-size: cover;
+  background-position: center;
+  padding: 50px;
+  color: #fff;
+  display: flex;
+}
+
+.column {
+  flex: 1;
+  margin: 0 10px;
+  text-align: left;
+}
+
+.column h2 {
+  font-weight: bold;
+}
+
+.column p {
+  font-weight: normal;
+}
+.column h2 {
+  font-weight: bold;
+}
+
+.column ul {
+  list-style: none;
+  padding: 0;
+}
+
+.column li::before {
+  content: none;
 }
